单例模式_图片地址更新

--- a/source/_posts/单例模式.md
+++ b/source/_posts/单例模式.md
@@ -9,7 +9,7 @@ cover: https://picsum.photos/id/124/800/600
 ## 定义
 一个类只有一个实例，且该类能自行创建这个实例的一种模式。
 ## UML
-![](https://cdn.nlark.com/yuque/0/2023/jpeg/32493114/1689142451446-5f59d386-ffb9-4114-a616-f6a129f54160.jpeg)
+![](/img/designMode/yuque_mind.jpeg)
 ## 模式的角色
 ### 单例类
 包含一个实例且能自行创建这个实例的类
