--- a/source/_posts/设计模式/单例模式.md
+++ b/source/_posts/设计模式/单例模式.md
@@ -2,6 +2,7 @@
 title: 单例模式
 date: 2024-07-29 13:34:06
 tags: 设计模式
+categories: 知识库
 top_img: https://picsum.photos/id/124/1920/600
 cover: https://picsum.photos/id/124/800/600
 ---
