--- a/themes/butterfly/languages/zh-CN.yml
+++ b/themes/butterfly/languages/zh-CN.yml
@@ -58,6 +58,7 @@ aside:
   tags: 标签
   categories: 分类
   card_announcement: 公告
+  card_calendar: 文章日历
   card_categories: 分类
   card_tags: 标签
   card_archives: 归档
