--- a/source/_posts/设计模式/单例模式.md
+++ b/source/_posts/设计模式/单例模式.md
@@ -1,7 +1,7 @@
 ---
 title: 单例模式
 date: 2024-07-29 13:34:06
-tags: 单例模式
+tags: [单例模式,创建型模式]
 categories: 设计模式
 top_img: https://picsum.photos/id/124/1920/600
 cover: https://picsum.photos/id/124/800/600
