更新文章顺序

--- a/source/_posts/设计模式/模板方法模式.md
+++ b/source/_posts/设计模式/模板方法模式.md
@@ -1,7 +1,7 @@
 ---
 title: 模板方法模式
 date: 2024-08-20 16:37:06
-tags: [原型模式,创建型模式]
+tags: [模板方法模式,行为型模式]
 categories: 设计模式
 top_img: https://picsum.photos/id/228/1920/600
 cover: https://picsum.photos/id/228/800/600
